# LLM-based-LeRobot-Control-System

src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: my_robot_controllers.yaml
src/my_robot_bringup/launch/: hardware_feedback_rviz.launch.py  hardware_moveit_rviz.launch.py  my_robot.launch.py  my_robot.launch.xml  my_robot_gazebo.launch.py
src/my_robot_bringup/scripts/: angle_sync_test.py  arm_control_test.py  joint_state_monitor.py  joint_state_test.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/rviz/: urdf_config.rviz
